התחלה של הדף אודות שלי
סיפור קצרצר עלי,תמונה שאוסיף בהמשך ואסדר במקום

--- a/about.html
+++ b/about.html
@@ -1,6 +1,9 @@
 <html>	
 <html>
    <head>
+	 <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="sty.css">
       <title>Omri Arad's info</title>
    </head>
@@ -9,11 +12,28 @@
          <h1>About me</h1>
       </div>
 	  <br>
-      <div class="mid">
-         <h2>Welcome to the James Webb site</h2>
-         <p style="font-size:22px">The James Webb Space Telescope (JWST) is a space telescope and an international collaboration among NASA, the European Space Agency (ESA), and the Canadian Space Agency (CSA).The telescope is named after James E. Webb,who was the administrator of NASA from 1961 to 1968 and played an integral role in the Apollo program. It is intended to succeed the Hubble Space Telescope as NASA's flagship mission in astrophysics. JWST was launched on 25 December 2021 on Ariane flight VA256. It is designed to provide improved infrared resolution and sensitivity over Hubble, viewing objects up to 100 times fainter than the faintest objects detectable by Hubble.
-         </p>
-      </div>
+	  <div class="aboutpic">
+	  <!--   <img src="pics/pic for about.jpeg"<    -->
+	  </div>
+	  	  </div>
+		<div class="aboutinfo">
+		<p>My name is Omri Arad,and since I was a little boy I had this obsession about space and everything connected to it.
+		Growing up I watched shows about space,read A lot of sci-fi books and even looked at the moon through my uncle’s telescope.
+		nowadays i usually watch documentaries and read articles.
+	</p>
+	<p> A couple of years ago i discovered a video game named “Elite Dangerous” which i play with a “hotas”(hands on throttle-and-stick)
+		that lets you fly a spaceship in a 1 on 1 scale of our galaxy “the milky way”.
+		i'm just having a blast visiting our solar system,checking out all the wired(and cool!) stuff we have in our universe such as:black holes,neutron stars,pulsars and what not.
+	</p>
+	<p>Anyway,I am really excited about the James Webb telescope,I think it's going to expand our knowledge about our universe by a tenfold!
+		and of course provide us with some stunning pictures.
+	</p>
+	<br>
+	<p>I can't wait for it to start working.
+	</p>
+
+
+		</div>
       <div class="links"> 
          <a href="https://www.jwst.nasa.gov/index.html" class="web">JWST main site</a>
          <a href="https://www.nasa.gov/" class="nasa">Nasa's main site</a>
