אחרי ישור תמונה וסידור לינקים
נשאר לי לסדר את הגלריה ואולי עוד כמה תיקונים

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       </div>
 	  <br>
 	  <div class="aboutpic">
-	  <!--   <img src="pics/pic for about.jpeg"<    -->
+	  <img src="pics/pic for about.jpeg" width="600" height="800">
 	  </div>
 	  	  </div>
 		<div class="aboutinfo">
@@ -35,11 +35,12 @@
 
 		</div>
       <div class="links"> 
-         <a href="https://www.jwst.nasa.gov/index.html" class="web">JWST main site</a>
-         <a href="https://www.nasa.gov/" class="nasa">Nasa's main site</a>
-         <a href="./gallery.html">Gallery</a>
-         <a href="./links and info.html">Links and Info</a>
-      </div>
+    <a href="https://www.jwst.nasa.gov/index.html" target="_blank"class="button">JWST main site</a>
+    <a href="https://www.nasa.gov/"target="_blank" class="button">Nasa's main site</a>
+    <a href="./main page.html" class="button">Main Page</a>
+    <a href="./links and info.html" class="button">Links and Info</a>
+	<a href="./gallery.html" class="button">Gallery</a>
+</div>
    </body>
 </html>
 
