--- a/links and info.html
+++ b/links and info.html
@@ -56,6 +56,7 @@
          <a href="https://www.nasa.gov/"target="_blank" class="button">Nasa's main site</a>
          <a href="./gallery.html" class="button">Gallery</a>
          <a href="./main page.html" class="button">Main Page</a>
+		 <a href="./about.html" class="button">about</a>
       </div>
    </body>
 </html>
