--- a/main page.html
+++ b/main page.html
@@ -21,6 +21,7 @@
          <a href="https://www.nasa.gov/" target="_blank" class="button">Nasa's main site</a>
          <a href="./gallery.html" class="button">Gallery</a>
          <a href="./links and info.html" class="button">Links and Info</a>
+		 <a href="./about.html" class="button">about</a>
       </div>
    </body>
 </html>
