--- a/gallery.html
+++ b/gallery.html
@@ -101,6 +101,7 @@
     <a href="https://www.nasa.gov/"target="_blank" class="button">Nasa's main site</a>
     <a href="./main page.html" class="button">Main Page</a>
     <a href="./links and info.html" class="button">Links and Info</a>
+	<a href="./about.html" class="button">about</a>
 </div>
 		
 		
