תיקון שגיא כתיב
תיקון שגיאת כתיב

--- a/links and info.html
+++ b/links and info.html
@@ -11,7 +11,7 @@
          <h1 class="laimain">Links and Info</h1>
       </div>
       <div class="latsec">
-        <div> <h2>Here are some cools facts about the Webb telescope</h2>
+        <div> <h2>Here are some cool facts about the Webb telescope</h2>
          <P>
             The design of the webb telescope emphasizes the near to mid-infrared range for three main reasons:
          </P>
